# sppparse

./: .gitlab-ci.yml  CHANGELOG  Cargo.toml  README.md
examples/: read_multi_file.rs  read_multi_files.json  read_multi_files0.json  read_multi_files1.json  read_single_file.rs  read_single_file_selector.rs  read_single_in_memory_simple.rs
sparse/: Cargo.toml
sparse/examples/: derive.rs  read_multi_file.rs  read_single_file.rs  read_single_in_memory_simple.rs  selector.json  update.rs
sparse/src/: lib.rs  sparsable.rs  sparse_errors.rs  sparse_metadata.rs  sparse_pointed_value.rs  sparse_pointer.rs  sparse_ref.rs  sparse_ref_raw.rs  sparse_ref_utils.rs  sparse_root.rs  sparse_selector.rs  sparse_state.rs  sparse_value.rs  sparse_value_mut.rs
sparse/src/tests/: mod.rs  pfile_path.rs  pointer_parsing.rs  ref_get_distant.rs  ref_get_local.rs  save_file.rs  simple_obj.rs  updating.rs
sparse/src/tests/docs/: list.json
sparse/src/tests/snapshots/: sparse__tests__save_file__save_change_type.snap  sparse__tests__save_file__save_change_type2.snap  sparse__tests__save_file__save_multiple_files-2.snap  sparse__tests__save_file__save_multiple_files-3.snap  sparse__tests__save_file__save_multiple_files.snap  sparse__tests__save_file__save_single_file.snap
sparse_derive/: Cargo.toml
sparse_derive/src/: lib.rs
sppparse/: Cargo.toml
sppparse/examples/: read_multi_file.rs  read_single_file.json  read_single_file.rs  read_single_file_inline.json  read_single_file_inline.rs  read_single_in_memory_simple.rs  update.rs
sppparse/src/: lib.rs  sparsable.rs  sparse_errors.rs  sparse_metadata.rs  sparse_pointed_value.rs  sparse_pointer.rs  sparse_ref.rs  sparse_ref_raw.rs  sparse_ref_raw_inline.rs  sparse_root.rs  sparse_selector.rs  sparse_state.rs  sparse_value.rs  sparse_value_mut.rs
sppparse/src/tests/: inline.rs  mod.rs  pfile_path.rs  recursive.rs  ref_get_local.rs
sppparse/src/tests/docs/: list.json
sppparse/src/tests/snapshots/: sppparse__tests__save_file__save_change_type.snap  sppparse__tests__save_file__save_change_type2.snap  sppparse__tests__save_file__save_multiple_files-2.snap  sppparse__tests__save_file__save_multiple_files-3.snap  sppparse__tests__save_file__save_multiple_files.snap  sppparse__tests__save_file__save_single_file.snap
sppparse_derive/: Cargo.toml
sppparse_derive/src/: lib.rs
src/: lib.rs  sparse.rs  sparse_builder.rs  sparse_errors.rs  sparse_pointed_value.rs  sparse_ref.rs  sparse_ref_raw.rs  sparse_ref_utils.rs  sparse_selector.rs  sparse_state.rs  sparse_value.rs
src/tests/: mod.rs  pfile_path.rs  pointer_parsing.rs  ref_get_distant.rs  ref_get_local.rs  simple_obj.rs  updating.rs
src/tests/docs/: simple.json
