[package]
name = "sparse"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.8"
getset = "0.1.1"
thiserror = "1"
rand = "0.8"
either = "1"
qcell = "0.4"
sparse_derive = { path = "../sparse_derive" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]

[dev-dependencies]
tempfile = "3"
