[package]
name = "sppparse"
version = "0.1.3"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
description = "Sparsed pointer parser for JSON/YAML"
repository = "https://github.com/basiliqio/sppparse"
license = "MIT"
readme = "../README.md"
keywords = ["json", "yaml", "sparse", "pointer", "parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
url = [ "url_inner" ]
semver = [ "semver_inner" ]

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.8"
getset = "0.1.1"
thiserror = "1"
rand = "0.8"
sppparse_derive = "0.1.2"
path-absolutize = "3.0.6"
path-clean = "0.1.0"
url_inner = { package = "url", version = "2", optional = true }
semver_inner = { package = "semver", version = "0.11", optional = true }
serde_path_to_error = "0.1.4"
[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]

[dev-dependencies]
tempfile = "3"
insta = "1.5"
