[package]
name = "sppparse_derive"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
description = "Derive macro for Spparse"
repository = "https://gitlab.com/basiliq/sppparse"
license = "MIT"
readme = "../README.md"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
synstructure = "0.12"
proc-macro2 = "1"
