[package]
name = "sppparse_derive"
version = "0.1.3"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
description = "Derive macro for Sppparse"
repository = "https://github.com/basiliqio/sppparse"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
synstructure = "0.12"
proc-macro2 = "1"
proc-macro-crate = "0.1.5"
syn = "1"
